--- a/index.html
+++ b/index.html
@@ -1,14 +1,211 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://media.glassdoor.com/sqll/7546460/devfolio-technologies-squarelogo-1660817869499.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DEVFOLIO</title>
-  </head>
-  <body>
-   
 
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml"
+    href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEDJIBa9cOKUUV31h-vF2UOx0DxP4H9Dfs4g&s" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GYMSTER</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+</head>
+
+<body>
+
+
+
+  <!-- Header -->
+  <!-- <header>
+    <div class="container mx-auto">
+
+      <div class="grid grid-cols-12 gap-4 items-center bg-neutral-500 p-4">
+
+        <div class="col-span-12 md:col-span-2 md:col-start-2 font-thin text-white flex items-center gap-2">
+          <i class="fa-solid fa-envelope text-amber-600 text-2xl"></i>
+          <span>info@example.com</span>
+        </div>
+
+        <div class="col-span-12 md:col-span-2 md:col-start-4 flex font-thin text-white items-center gap-2">
+          <i class="fa-solid fa-phone text-amber-600 text-2xl"></i>
+          <span>+012 345 6789</span>
+        </div>
+
+        <div
+          class="col-span-12 md:col-span-5 md:col-start-7 flex text-white justify-end md:justify-end text-2xl items-center gap-8">
+          <a href="#"><i
+              class="fa-brands fa-facebook-f hover:text-amber-600 hover:scale-125 transition duration-300"></i></a>
+          <a href="#"><i
+              class="fa-brands fa-twitter hover:text-amber-600 hover:scale-125 transition duration-300"></i></a>
+          <a href="#"><i
+              class="fa-brands fa-instagram hover:text-amber-600 hover:scale-125 transition duration-300"></i></a>
+          <a href="#"><i
+              class="fa-brands fa-linkedin-in hover:text-amber-600 hover:scale-125 transition duration-300"></i></a>
+          <a href="#"><i
+              class="fa-brands fa-youtube hover:text-amber-600 hover:scale-125 transition duration-300"></i></a>
+        </div>
+
+      </div>
+
+      <div class="grid grid-cols-12 items-center bg-neutral-800 p-5">
+
+        <div class="col-span-12 md:col-span-2 md:col-start-2 flex items-center">
+          <a href="#">
+            <h1 class="text-5xl text-amber-600 font-serif font-bold">GYMSTER</h1>
+          </a>
+        </div>
+
+        <div class="col-span-12 md:col-span-6 md:col-start-5 flex justify-center">
+          <ul class="flex space-x-8 text-lg font-medium text-white uppercase">
+            <li><a href="#" class="hover:text-amber-600 transition-colors">Home</a></li>
+            <li><a href="#" class="hover:text-amber-600 transition-colors">About</a></li>
+            <li><a href="#" class="hover:text-amber-600 transition-colors">Classes</a></li>
+            <li><a href="#" class="hover:text-amber-600 transition-colors">Trainers</a></li>
+            <li><a href="#" class="hover:text-amber-600 transition-colors">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-span-12 md:col-span-2 md:col-start-11 flex justify-end">
+          <a href="#"
+            class="text-white bg-amber-600 px-10 py-3 rounded-full hover:bg-amber-800 transition duration-300">Join
+            Us</a>
+        </div>
+
+      </div>
+
+      <div class="relative w-full h-[800px]">
+        <div class="absolute inset-0 bg-cover bg-center brightness-50"
+          style="background-image: url('public/carousel-2.jpg');"></div>
+
+        <div class="absolute inset-0 flex flex-col justify-start md:justify-start items-center px-4 pt-16 md:pt-32">
+          <p class="text-white text-3xl font-thin text-center">Best Gym Center</p>
+          <h1 class="text-white text-5xl md:text-6xl font-serif font-bold text-center mt-4 md:mt-6 leading-tight">
+            Grow Your Strength With <br> Our Trainers
+          </h1>
+
+          <div class="flex gap-6 mt-8 md:mt-10">
+            <a href="#"
+              class="text-white bg-amber-600 px-10 py-3 rounded-full hover:bg-amber-800 transition duration-300">Join
+              Us</a>
+            <a href="#"
+              class="text-black bg-white border border-white px-10 py-3 rounded-full hover:bg-transparent hover:text-white transition duration-300">Contact
+              Us</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </header> -->
+
+
+  <!-- About Us -->
+  <!-- 
+  <section>
+    <div class="container md:mb-10">
+      <div class="grid grid-cols-12 ">
+        <div class="col-span-12 md:col-span-4 md:col-start-2 md:mt-10">
+          <img src="public/about.jpg" class="object-cover w-full h-[600px] bg-cover" alt="">
+        </div>
+        <div class="col-span-12 md:col-span:8 md:col-start-7 md:mt-10">
+          <p class="text-amber-600 text-2xl font-bold font-serif">ABOUT US</p>
+          <h1 class="text-5xl font-extrabold uppercase">Welcome to Gymster</h1>
+          <p class="capitalize md:mt-5 text-lg font-bold text-gray-500 ">Diam dolor diam ipsum tempor sit. Clita erat
+            ipsum et lorem stet no labore lorem sit clita duo justo magna dolore</p>
+          <p class="capitalize md:mt-5 font-thin">Nonumy erat diam duo labore clita. Sit magna ipsum dolor sed ea duo at
+            ut. Tempor sit lorem sit magna ipsum duo. Sit eos dolor ut sea rebum, diam sea rebum lorem kasd ut ipsum
+            dolor est ipsum. Et stet amet justo amet clita erat.</p>
+          <div class="bg-gray-900 md:mt-10 md:py-7 md:px-20 md:mr-10 flex flex-col items-start gap-6">
+            <div class="flex gap-6">
+              <a href="#"
+                class="text-white bg-amber-600 px-20 py-3 rounded-full hover:bg-amber-800 transition duration-300">About
+                Us</a>
+              <a href="#"
+                class="text-amber-600 px-10 py-3 rounded-full hover:text-amber-800 transition duration-300">Contact
+                Us</a>
+            </div>
+
+            <p class="font-thin text-white mt-4">
+              Tempor erat elitr at rebum at at clita aliquyam consetetur. Diam dolor diam ipsum et, tempor voluptua sit
+              consetetur sit. Aliquyam diam amet diam et eos sadipscing labore. Clita erat ipsum et lorem et sit, sed
+              stet no labore lorem sit. Sanctus clita duo justo et tempor consetetur takimata eirmod, dolores takimata
+              consetetur invidunt magna dolores aliquyam dolores dolore. Amet erat amet et magna
+            </p>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    </div>
+  </section> -->
+
+
+  <section>
+    <div class="container ">
+      <div class="grid grid-cols-12 gap-4">
+        <div
+          class="col-span-12 md:col-span-4 md:mt-20 md:ml-5 bg-slate-100 p-8 rounded-2xl flex flex-col items-center text-center">
+          <i class="fa-solid fa-person-walking text-5xl text-amber-600 mb-3"></i>
+
+          <h3 class="text-4xl font-bold mb-2">Body Building</h3>
+
+          <p class="capitalize text-lg font-thin mb-4">
+            Sed amet tempor amet sit kasd sea lorem dolor ipsum elitr dolor amet kasd elitr duo vero amet amet stet
+          </p>
+
+          <a href="#"
+            class="inline-flex mt-3 text-amber-600 font-medium items-center hover:underline decoration-amber-500 underline-offset-4">
+            Read More
+            <svg class="w-4 h-4 ms-2 rtl:rotate-[270deg] text-amber-600" aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M18 14v4.833A1.166 1.166 0 0 1 16.833 20H5.167A1.167 1.167 0 0 1 4 18.833V7.167A1.166 1.166 0 0 1 5.167 6h4.618m4.447-2H20v5.768m-7.889 2.121 7.778-7.778" />
+            </svg>
+          </a>
+        </div>
+
+       <div class="col-span-12 md:col-span-4 md:mt-20  bg-slate-100 p-8 rounded-2xl flex flex-col items-center text-center">
+  <i class="fa-brands fa-odysee text-5xl text-amber-600 mb-3"></i>
+
+  <h3 class="text-4xl font-bold mb-2">Body Building</h3>
+
+  <p class="capitalize text-lg font-thin mb-4">
+    Sed amet tempor amet sit kasd sea lorem dolor ipsum elitr dolor amet kasd elitr duo vero amet amet stet
+  </p>
+
+  <a href="#"
+    class="inline-flex mt-3 text-amber-600 font-medium items-center hover:underline decoration-amber-500 underline-offset-4">
+    Read More
+    <svg class="w-4 h-4 ms-2 rtl:rotate-[270deg] text-amber-600" aria-hidden="true"
+      xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M18 14v4.833A1.166 1.166 0 0 1 16.833 20H5.167A1.167 1.167 0 0 1 4 18.833V7.167A1.166 1.166 0 0 1 5.167 6h4.618m4.447-2H20v5.768m-7.889 2.121 7.778-7.778" />
+    </svg>
+  </a>
+</div>
+<div class="col-span-12 md:col-span-4 md:mt-20 md:mr-5 bg-slate-100 p-8 rounded-2xl flex flex-col items-center text-center">
+  <i class="fa-solid fa-person-walking text-5xl text-amber-600 mb-3"></i>
+
+  <h3 class="text-4xl font-bold mb-2">Body Building</h3>
+
+  <p class="capitalize text-lg font-thin mb-4">
+    Sed amet tempor amet sit kasd sea lorem dolor ipsum elitr dolor amet kasd elitr duo vero amet amet stet
+  </p>
+
+  <a href="#"
+    class="inline-flex mt-3 text-amber-600 font-medium items-center hover:underline decoration-amber-500 underline-offset-4">
+    Read More
+    <svg class="w-4 h-4 ms-2 rtl:rotate-[270deg] text-amber-600" aria-hidden="true"
+      xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M18 14v4.833A1.166 1.166 0 0 1 16.833 20H5.167A1.167 1.167 0 0 1 4 18.833V7.167A1.166 1.166 0 0 1 5.167 6h4.618m4.447-2H20v5.768m-7.889 2.121 7.778-7.778" />
+    </svg>
+  </a>
+</div>
+
+  </section>
+
+
+
+
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
