--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
   <!-- Header -->
-  <!-- <header>
+<header>
     <div class="container mx-auto">
 
       <div class="grid grid-cols-12 gap-4 items-center bg-neutral-500 p-4">
@@ -93,12 +93,12 @@
       </div>
 
     </div>
-  </header>  -->
+  </header> 
 
 
   <!-- About Us -->
- 
-  <!-- <section>
+
+  <section>
     <div class="container md:mb-10">
       <div class="grid grid-cols-12 ">
         <div class="col-span-12 md:col-span-4 md:col-start-2 md:mt-10">
@@ -210,7 +210,7 @@
 
       </div>
     </div>
-  </section>  -->
+  </section>  
 
 
 
@@ -218,7 +218,7 @@
 
 
 
-<!-- <section>
+ <section>
                       <div class="container">
                         <div class="grid grid-cols-12">
                          <div class="col-span-12  mt-20">
@@ -290,12 +290,12 @@
     </div>
   </div>
 </div>
-              </section> -->
+              </section> 
 
 
 
   <!-- Team Section -->
-   <!-- <section>
+   <section>
   <div class="container">
     <div class="grid grid-cols-12">
       <div class="col-span-12 mt-20">
@@ -374,13 +374,13 @@
   </section>
 
 
- -->
 
 
 
-             <!-- Latest Blog -->
 
-<section>
+  <!-- Latest Blog -->
+
+ <section>
   <div class="container">
     <div class="grid grid-cols-12">
       <div class="col-span-12 mt-20">
@@ -391,38 +391,197 @@
       </div>
     </div>
   </div>
+<div class="container md:mt-10 md:mb-10 mx-auto px-4 md:px-10">
+  <div class="grid grid-cols-12 gap-6">
 
-  <div class="container md:mt-10 md:mb-10 mx-auto px-4 md:px-10">
-    <div class="grid grid-cols-12 gap-5">
+    <div class="col-span-12 md:col-span-4 overflow-hidden">
+      <div class="relative">
+        <img src="public/blog-1.jpg"
+          class="w-full h-[400px] object-cover hover:scale-105 transition duration-300" alt="">
 
-      <div class="col-span-12 md:col-span-4 relative overflow-hidden rounded-xl">
-        <img src="public/blog-1.jpg" class="w-full h-[400px] object-cover hover:scale-105 transition duration-300" alt="">
+        <div class="absolute bottom-0 w-full bg-[#1f232b] p-6 flex gap-6 items-center">
 
-        <div class="absolute bottom-0 w-full bg-slate-800 px-4 py-6 flex justify-between items-center">
-          <h5 class="text-white text-xl font-normal">01 January 2045 </h5> 
-          <h2 class="text-white text-lg font-semibold">Sed amet tempor amet sit kasd sea lorem</h2>
+          <div class="text-center text-white leading-tight">
+            <h3 class="text-xl font-bold">01</h3>
+            <p class="uppercase text-sm">January</p>
+            <p class="text-sm">2045</p>
+          </div>
+
+          <div class="w-px h-14 bg-gray-500"></div>
+          <h2 class="text-white text-lg font-bold uppercase">
+            Sed amet tempor amet sit kasd sea lorem
+          </h2>
+
         </div>
       </div>
+    </div>
 
-      <div class="col-span-12 md:col-span-4 relative overflow-hidden rounded-xl">
-        <img src="public/blog-2.jpg" class="w-full h-[400px] object-cover hover:scale-105 transition duration-300" alt="">
-        <div class="absolute top-4 left-4 bg-black bg-opacity-50 px-4 py-2 rounded">
-          <h5 class="text-white text-xl font-bold">James Taylor</h5>
-          <p class="text-gray-200 text-sm">Body Building</p>
+    <div class="col-span-12 md:col-span-4 overflow-hidden">
+      <div class="relative">
+        <img src="public/blog-2.jpg"
+          class="w-full h-[400px] object-cover hover:scale-105 transition duration-300" alt="">
+
+        <div class="absolute bottom-0 w-full bg-[#1f232b] p-6 flex gap-6 items-center">
+          <div class="text-center text-white leading-tight">
+            <h3 class="text-xl font-bold">01</h3>
+            <p class="uppercase text-sm">January</p>
+            <p class="text-sm">2045</p>
+          </div>
+
+          <div class="w-px h-14 bg-gray-500"></div>
+
+          <h2 class="text-white text-lg font-bold uppercase">
+            Sed amet tempor amet sit kasd sea lorem
+          </h2>
         </div>
       </div>
+    </div>
 
-      <div class="col-span-12 md:col-span-4 relative overflow-hidden rounded-xl">
-        <img src="public/blog-3.jpg" class="w-full h-[400px] object-cover hover:scale-105 transition duration-300" alt="">
-        <div class="absolute top-4 left-4 bg-gray-300 bg-opacity-50 px-4 py-2 rounded">
-          <h5 class="text-white text-xl font-bold">Adam Phillips</h5>
-          <p class="text-gray-200 text-sm">Cardio Program</p>
+    <div class="col-span-12 md:col-span-4 overflow-hidden ">
+      <div class="relative">
+        <img src="public/blog-3.jpg"
+          class="w-full h-[400px] object-cover hover:scale-105 transition duration-300" alt="">
+
+        <div class="absolute bottom-0 w-full bg-[#1f232b] p-6 flex gap-6 items-center">
+          <div class="text-center text-white leading-tight">
+            <h3 class="text-xl font-bold">01</h3>
+            <p class="uppercase text-sm">January</p>
+            <p class="text-sm">2045</p>
+          </div>
+
+          <div class="w-px h-14 bg-gray-500"></div>
+
+          <h2 class="text-white text-lg font-bold uppercase">
+            Sed amet tempor amet sit kasd sea lorem
+          </h2>
         </div>
       </div>
+    </div>
+
+  </div>
+</div>
+
+
+</section> 
+
+
+
+
+
+  <!-- Footer -->
+
+<footer class="">
+  <div class="container md:mt-32 mx-auto px-4 md:px-10 bg-slate-800 text-white p-8">
+    <div class="grid grid-cols-12">
+      
+      <div class="col-span-12 md:col-span-3">
+        <h3 class="text-xl font-bold mb-4">Get in touch</h3>
+
+        <div class="flex items-center gap-3 mb-3">
+          <i class="fa-solid fa-location-dot text-amber-600"></i>
+          <span>123 Street, New York, USA</span>
+        </div>
+
+        <div class="flex items-center gap-3 mb-3">
+          <i class="fa-solid fa-envelope-open text-amber-600"></i>
+          <span>info@example.com</span>
+        </div>
+
+        <div class="flex items-center gap-3">
+          <i class="fa-solid fa-phone text-amber-600"></i>
+          <span>+012 345 67890</span>
+        </div>
+        <div>
+          <ul class="flex gap-5 md:mt-5">
+            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+          </ul>
+        </div>
+
+      </div>
+ <div class="col-span-12 md:col-span-3">
+        <h3 class="text-xl font-bold mb-4">Quick Links</h3>
+
+        <div>
+          <ul class="space-y-3 md:mt-5">
+            <li><a href="#"><i class="fa-solid fa-arrow-right"></i> Home</a></li>
+            <li><a href="#"><i class="fa-solid fa-arrow-right"></i> About us</a></li>
+            <li><a href="#"><i class="fa-solid fa-arrow-right"></i> Class Schedule</a></li>
+            <li><a href="#"><i class="fa-solid fa-arrow-right"></i> Our Trainers</a></li>
+            <li><a href="#"><i class="fa-solid fa-arrow-right"></i> Latest Blog</a></li>
+            <li><a href="#"><i class="fa-solid fa-arrow-right"></i> Contact Us</a></li>
+          </ul>
+        </div>
+        </div>
+         <div class="col-span-12 md:col-span-3">
+        <h3 class="text-xl font-bold mb-4">Popular
+ Links</h3>
+
+        <div>
+          <ul class="space-y-3 md:mt-5">
+            <li><a href="#"><i class="fa-solid fa-arrow-right"></i> Home</a></li>
+            <li><a href="#"><i class="fa-solid fa-arrow-right"></i> About us</a></li>
+            <li><a href="#"><i class="fa-solid fa-arrow-right"></i> Class Schedule</a></li>
+            <li><a href="#"><i class="fa-solid fa-arrow-right"></i> Our Trainers</a></li>
+            <li><a href="#"><i class="fa-solid fa-arrow-right"></i> Latest Blog</a></li>
+            <li><a href="#"><i class="fa-solid fa-arrow-right"></i> Contact Us</a></li>
+          </ul>
+        </div>
+        </div>
+     <div class="col-span-12 md:col-span-3 space-y-3">
+  
+  <input type="text" placeholder="Your Name"
+    class="w-full border border-gray-300 p-4 rounded
+    focus:border-amber-600 focus:border-4 focus:outline-none transition duration-300">
+
+  <input type="email" placeholder="Your Email"
+    class="w-full border border-gray-300 p-4 rounded
+    focus:border-amber-600 focus:border-4 focus:outline-none transition duration-300">
+
+  <input type="tel" placeholder="Your Phone"
+    class="w-full border border-gray-300 p-4 rounded
+    focus:border-amber-600 focus:border-4 focus:outline-none transition duration-300">
+
+  <!-- Button -->
+  <a href="#"
+    class="block text-center text-lg bg-amber-600 hover:bg-amber-800
+    transition duration-300 p-4 rounded mt-3">
+    Send Message
+  </a>
+
+</div>
 
     </div>
+    <!-- Copyright -->
+<div class="border-t border-gray-700 mt-16 pt-6 bg-black p-6" >
+  <div class="flex flex-col md:flex-row justify-between items-center text-sm text-gray-400">
+    
+    <!-- Left -->
+    <p class="mb-2 md:mb-0">
+      © <span class="text-white font-semibold">GYMSTER</span>. All Rights Reserved.
+    </p>
+
+    <!-- Right -->
+    <p>
+      Designed by <span class="text-amber-600 font-semibold">Syed Umair</span>
+    </p>
+
   </div>
-</section>
+</div>
+
+  </div>
+</footer>
+
+
+
+
+
+
+
+
+
 
   <script type="module" src="/src/main.ts"></script>
 </body>
